[package]
name = "include-merkle"
version = "0.1.4"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
description = "Functionality for generating a Merkle-tree of a given text file with include references, replacing includes paths with a deterministic versioned identity, and also functionality for flattening include directives into a single file. The primary motivation is compiling shaders for various graphics APIs, but the the functionality can apply to a variety of source code parsing use cases."
homepage = "https://github.com/gwihlidal/include-merkle-rs"
repository = "https://github.com/gwihlidal/include-merkle-rs"
documentation = "https://docs.rs/include-merkle"
readme = "README.md"
keywords = ["shader", "include", "merkle", "identity", "reference"]
categories = ["rendering::data-formats", "rendering", "rendering::engine", "rendering::graphics-api", "parsing"]
license = "MIT/Apache-2.0"
include = [
    "src/*.rs",
    "Cargo.toml",
]
edition = "2018"

[badges]
travis-ci = { repository = "gwihlidal/include-merkle-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
petgraph = "0.4.13"
ptree = "0.2.1"
lazy_static = "1.2.0"
base58 = "0.1.0"
regex = "1.1.0"
sha2 = "0.8.0"
normalize-line-endings = "0.3.0"
chardet = "0.2"
encoding = "0.2.33"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1